Session logout when timeout

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -368,7 +368,8 @@ account.confirmation.password.updated=Ahora puedes iniciar sesión con la nueva 
 account.confirmation.payment.details.removed=Se eliminaron los detalles de pago.
 account.confirmation.profile.updated=Se actualizó el perfil.
 account.confirmation.signout.subtitle=El carro estará esperándolo cuando vuelva a iniciar sesión.
-account.confirmation.signout.title=Ha salido de la cuenta.
+account.confirmation.expiredSession.title=Sesión actualizada por inactividad. 
+account.confirmation.signout.title=Ha salido de la cuenta. 
 account.confirmation.close.title=Su cuenta se ha cerrado.
 account.error.account.exists.with.email.address.subtitle=Seleccione una dirección de correo electrónico alternativa.
 account.error.account.exists.with.email.address.title=Ya existe una cuenta para esta dirección de correo {0}
