se agregan cambios parafecha de validez de agente autorizado y fecha de expedición para cedula de ciudadania

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4825,6 +4825,10 @@ autorizado.crear.buscar.fecexpe=Fecha de expedición
 autorizado.crear.buscar.cancelar=Cancelar
 autorizado.crear.buscar.buscar=Buscar
 
+#Sea agregan etiquetas para fechas 09/12/2020
+autorizado.crear.buscar.fechinivali=Fecha inicio de validez
+autorizado.crear.buscar.fechfinvali=Fecha fin de validez
+
 autorizado.crear.table.tipdoc=Tipo documento
 autorizado.crear.table.numdoc=Número documento
 autorizado.crear.table.nombre=Nombre
