Ajuste de mensaje error de conexion PSE

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3931,7 +3931,7 @@ edocuenta.inicial.obligaciones.desthacen=Destino hacendario
 edocuenta.inicial.obligaciones.impuesto=Impuesto
 edocuenta.inicial.obligaciones.saldcuneta=Saldo en cuenta
 
-pse.message.error.no.connection=Occurio un error con la conexión a PSE
+pse.message.error.no.connection=Occurio un error con la conexión a ACH
 pse.message.error.no._FAIL_EXCEEDEDLIMIT=Su transacción ha superado el monto autorizado por favor comuníquese con su entidad financiera.Comuníquese a la línea 195
 pse.message.error.no._FAIL_BANKUNREACHEABLE=La entidad financiera no puede ser contactada para iniciar la transacción, por favor seleccione otra o intente más tarde.
 pse.message.error.no._FAIL_EXCEPTION=No se pudo crear la transacción, por favor intente más tarde o comuníquese a la línea 195.
