Se agregan cambios por ID de acto para declaraciones de vehicular y predial

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31280,3 +31280,38 @@ predial.mensaje.spac= Si te acoges al pago por cuotas debes dar click en firmar 
 
 #Mensaje par obligaciones de RETEICA
 obligaciones.mensaje.reteica=Los contribuyentes no tienen obligaciones pendientes por concepto del impuesto ReteICA
+
+
+#SE agrega campo para vehiculos y predial en presentar declaración
+sobre.vehiculo.table.idacto= ID Acto
+predial.inicial.table.idacto= ID Acto
+
+#Se agregan descripciones para declaración de vehiculos
+
+sobre.vehiculo.declaracion.vehiculo.idacto= ID acto
+sobre.vehiculo.declaracion.vehiculo.fechanotiacto=Fecha notificación
+sobre.vehiculo.declaracion.vehiculo.descriacto=Descripción del acto
+sobre.vehiculo.declaracion.vehiculo.numeroexpediente=Número de expediente
+
+sobre.vehiculo.declaracion.vehiculo.liq.acogerseacto=¿Desea acogerse al acto oficial?
+
+#Se agregan descripciones para declaración de predial
+
+predial.declaracion.vehiculo.idacto= ID acto
+predial.declaracion.vehiculo.fechanotiacto=Fecha notificación
+predial.declaracion.vehiculo.descriacto=Descripción del acto
+predial.declaracion.vehiculo.numeroexpediente=Número de expediente
+
+predial.declaracion.vehiculo.liq.acogerseacto=¿Desea acogerse al acto oficial?
+
+#Se agrega breadcrumb para detalle de Acto
+text.account.profile.detalleacto = Detalle acto
+
+#Se agregan etiquetas para funcionalidad de actos
+acto.detalle.inicial.title= Detalle acto
+acto.detalle.inicial.descripcion= Aquí se describirá el proposito que tiene la pantalla
+
+acto.detalle.inicial.idacto=Id Acto
+acto.detalle.inicial.detalle= Descripción del acto
+acto.detalle.inicial.fechaini= Fecha notificación
+acto.detalle.inicial.numexpe=Número de expediente
