Mi rit (mis impuestos - ica) Ajuste para mostrar las actividades economicas en forma de tabla, llamada a WS para actualizar datos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1967,6 +1967,7 @@ mirit.taxesData.vehicleModel=Modelo
 mirit.taxesData.vehicleDescription=Drescripción
 mirit.taxesData.vehicleRelation=Relación (Propietario, Poseedor...
 mirit.taxesData.vehicleResponsabilityPercetage=%  de Responsabilidad
+mirit.taxesData.actualizarInfo=Actualizar información de Actividades Económicas
 
 mirit.myRepresentants.title=Agentes Autorizados
 mirit.myRepresentants.howRepresentsMe=Quién me representa
