Se agregan cambios para mensaje de spac en declaracion vehicular

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31305,6 +31305,12 @@ predial.declaracion.vehiculo.numeroexpediente=Número de expediente
 
 predial.declaracion.vehiculo.liq.acogerseacto=¿Desea acogerse al acto oficial?
 
+
+#Mensaje para vehiculos del SPAC
+sobre.vehiculo.mensaje.spac= Si te acoges al pago por cuotas debes dar click en firmar declaración, luego seleccionar el botón de SPAC y por último dar click en "Presentar Declaración"
+
+
+
 #Se agrega breadcrumb para detalle de Acto
 text.account.profile.detalleacto = Detalle acto
 
