Se agregan cambios para tramite Crear Agente Autorizado.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4854,7 +4854,9 @@ autorizado.crear.calidad.replegal=Representante legal
 autorizado.crear.calidad.revfiscal=Revisor fiscal
 autorizado.crear.calidad.tutor=Tutor
 autorizado.crear.calidad.nota3=¡Atención!
-autorizado.crear.calidad.nota4=Para esta calidad X deberá de adjuntar los siguientes documentos
+autorizado.crear.calidad.nota4=Para esta calidad X deberá de adjuntar los siguientes documentos:
+autorizado.crear.calidad.nota8=-Documento 1.
+autorizado.crear.calidad.nota9=-Documento 2.
 autorizado.crear.calidad.nota5=De contar con los documentos en este momento es necesario le de aviso a su Agente Autorizado realice esta carga de archivos, así como el tiempo de respuesta para solicitud es concluida una vez revisados los documentos adjuntos solicitados.
 autorizado.crear.calidad.nota6=Esta solicitud tiene 3 días para ser habilitada o se eliminará del sistema.
 autorizado.crear.calidad.nota7=Mas adelante hay una sección donde podrás adjuntar los documentos solicitados.
@@ -4865,7 +4867,7 @@ autorizado.crear.impuesto.todos=Todos
 autorizado.crear.impuesto.concerv=Consumo de cerveza
 autorizado.crear.impuesto.conciga=Consumo cigarrillos
 autorizado.crear.impuesto.contespecial=Contribución especial de obra pública
-autorizado.crear.impuesto.delurban=Impuestos de Delineación Urbana
+autorizado.crear.impuesto.delurban=Delineación Urbana
 autorizado.crear.impuesto.estamp=Estampillas adulto mayor
 autorizado.crear.impuesto.estcult=Estampillas pro cultura
 autorizado.crear.impuesto.estuni=Estampillas pro universidad
@@ -4873,10 +4875,10 @@ autorizado.crear.impuesto.indcom=Impuestos de Industria y comercio
 autorizado.crear.impuesto.lorfor=Loterías Foráneas
 autorizado.crear.impuesto.peruni=Impuestos de Predial
 autorizado.crear.impuesto.pubeste=Impuestos de Publicidad Exterior
-autorizado.crear.impuesto.reteica=Impuestos de Retenciones Industrial y Comercio
+autorizado.crear.impuesto.reteicomercio=Retenciones Industrial y Comercio
 autorizado.crear.impuesto.soblot=Sobre premios de lotería
-autorizado.crear.impuestovehiculos=Impuestos de Vehículos
-autorizado.crear.impuesto.gasolina=SImpuestos de Motores a Gasolina
+autorizado.crear.impuestovehiculos=Sobre Vehpiculos Automotores
+autorizado.crear.impuesto.gasolina=Impuestos de Motores a Gasolina
 autorizado.crear.impuesto.unazar=Unificado de azar
 autorizado.crear.impuesto.undist=Universidad Distrital
 autorizado.crear.impuesto.nota2=Debes seleccionar el o los objetos en donde deseas que te representen
@@ -4885,17 +4887,18 @@ autorizado.crear.impuesto.objetos=Objetos
 autorizado.crear.impuesto.cdu=CDU
 autorizado.crear.impuesto.radicado=Radicado
 autorizado.crear.impuesto.selec=Seleccionar
+autorizado.crear.impuesto.inducomer=Industria y Comercio
 
-autorizado.crear.impuesto.predial=Predial
+autorizado.crear.impuesto.predial=Predial Unificado
 autorizado.crear.impuesto.vehicular=Vehicular 
 autorizado.crear.impuesto.ica=ICA
 autorizado.crear.impuesto.reteIca=Rete ICA
-autorizado.crear.impuesto.sobretasaGasolina=Sobret la Gasolina
+autorizado.crear.impuesto.sobretasaGasolina=Sobretasa a la Gasolina Motor
 autorizado.crear.impuesto.delineacionUrbana=Delineacion Urbana 
-autorizado.crear.impuesto.publicidadExterior=Publicidad Exterior
+autorizado.crear.impuesto.publicidadExterior=Publicidad Exterior Visual
 
-autorizado.crear.tramgen.titulo=4.- Selecciona si la representación es por Trámites/Proceso o General
-autorizado.crear.tramgen.nota1=Selecciona en que vas a solicitar ser representado
+autorizado.crear.tramgen.titulo=4.- Selecciona la representación que deseas otorgar
+autorizado.crear.tramgen.nota1=Selecciona en que vas a solicitar ser representado, puedes elegir una o varias opciones.
 autorizado.crear.tramgen.represen.titulo=Representación
 autorizado.crear.tramgen.represen.general=General
 autorizado.crear.tramgen.represen.proceso=Proceso
@@ -4952,6 +4955,7 @@ autorizado.crear.tramgen.tramite.2017=2017
 autorizado.crear.tramgen.tramite.2016=2016
 autorizado.crear.tramgen.tramite.2015=2015
 
+
 autorizado.crear.tramgen.proce.miRit=Mi RIT
 autorizado.crear.tramgen.proce.miBuzon=Mi Buzón
 autorizado.crear.tramgen.proce.impuestos=Impuestos
@@ -4961,8 +4965,9 @@ autorizado.crear.tramgen.proce.declaraciones=Declaraciones
 autorizado.crear.tramgen.proce.consultas=Consultas
 
 autorizado.crear.documentos.titulo=5.- Anexar documentación
-autorizado.crear.documentos.nota1=Para continuar cin tu proceso es necesario anexar los documentos
+autorizado.crear.documentos.nota1=Para continuar con tu proceso es necesario anexar los documentos
 autorizado.crear.documentos.continuar=Continuar
+autorizado.crear.documentos.notaanexar= RECUERDA: Al dar clic en "Continuar" se dará como aceptado la creación del agente autorizado con los impuestos y trámites seleccionados.
 
 #asignarse agente autorizado
 autorizado.asignarse.inicial.titulo= Asignarse como agente autorizado
