Obligaciones pendientes - (vista contribuyente): ajustes para mostrar mensaje cuando no hay obligaciones pendientes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31287,6 +31287,14 @@ predial.mensaje.spac= Si te acoges al pago por cuotas debes dar click en firmar 
 #Mensaje par obligaciones de RETEICA
 obligaciones.mensaje.reteica=Los contribuyentes no tienen obligaciones pendientes por concepto del impuesto ReteICA
 
+obligaciones.todos.noCuentaPendientes=No cuenta con obligaciones pendientes de este impuesto
+obligaciones.predial.noCuentaPendientes=No cuenta con obligaciones pendientes de Predial
+obligaciones.vehiculos.noCuentaPendientes=No cuenta con obligaciones pendientes de Impuestos de Vehículos
+obligaciones.ica.noCuentaPendientes=No cuenta con obligaciones pendientes de ICA
+obligaciones.gasolina.noCuentaPendientes=No cuenta con obligaciones pendientes de Sobretasa Gasolina
+obligaciones.delineacion.noCuentaPendientes=No cuenta con obligaciones pendientes de Delineación Urbana
+obligaciones.publicidadExt.noCuentaPendientes=No cuenta con obligaciones pendientes de Publicidad Exterior
+
 
 #SE agrega campo para vehiculos y predial en presentar declaración
 sobre.vehiculo.table.idacto= ID Acto
