Ajustes en formulario de pago exitoso.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3248,6 +3248,7 @@ sobre.vehiculo.liqui.presdecla= Generar declaración vigencia actual
 
 psePaymentForm.tipoDeImpuesto=Tipo de impuesto
 psePaymentForm.numeroDeReferencia=Número de referencia
+psePaymentForm.completeName=Nombre completo
 psePaymentForm.impuesto=Impuesto
 psePaymentForm.anoGravable=Año Gravable
 psePaymentForm.CHIP=CHIP
