Registro de usuario - validacion adicional: con el numero de BP se revisa la existencia del usuario en la Base de Datos de Commerce

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -175,6 +175,7 @@ checkout.multi.deliveryAddress.breadcrumb=Dirección de envío
 forgottenPwd.email.invalid=Indique una dirección de correo electrónico
 profile.email.invalid=Indique una dirección de correo electrónico válida - ejemplo@sudominio.com
 register.email.invalid=Indique una dirección de correo electrónico
+register.numBP.invalid=El usuario ya se encuentra registrado en el sistema con otro correo
 register.confirmEmail.invalid=Por favor confirme el correo
 validation.confirmEmail.equals=Correo y confirmación de correo no coinciden
 password.strength.minchartext=La contraseña debe tener una letra mayúscula, una minúscula, un número y una longitud entre 8 y 16 caracteres
