Se agregan cambios para Relacion de pagos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3729,7 +3729,7 @@ relacion.inicial.predio.visualizar=Visualizar
 relacion.inicial.predio.aniograv=Año gravable
 relacion.inicial.predio.tipdoc=Tipo de documento
 relacion.inicial.predio.norefrecaudo=No. referencia recaudo
-relacion.inicial.predio.sticker=Sticker
+relacion.inicial.predio.sticker=No. formulario
 relacion.inicial.predio.fecpreseta=Fecha de presentación
 relacion.inicial.predio.totpagado=Total pagado
 relacion.inicial.predio.totaporte=Total con aporte voluntario
@@ -3743,7 +3743,7 @@ relacion.inicial.vehiculo.visualizar=Visualizar
 relacion.inicial.vehiculo.aniograv= Año gravable
 relacion.inicial.vehiculo.tipdoc=Tipo de documento
 relacion.inicial.vehiculo.numrefrec=No. referencia recaudo
-relacion.inicial.vehiculo.sticker=Sticker
+relacion.inicial.vehiculo.numform=No. formulario
 relacion.inicial.vehiculo.fecprese=Fecha de presentación
 relacion.inicial.vehiculo.totpag=Total Pagado
 relacion.inicial.vehiculo.totapovol=Total con aporte voluntario
@@ -3755,17 +3755,28 @@ relacion.inicial.ica.numdoc=No. documento
 relacion.inicial.ica.tipdocu= Tipo de Documento
 relacion.inicial.ica.visualizar=Visualizar
 relacion.inicial.ica.numrefrec= No. referencia recaudo
-relacion.inicial.ica.sticker= Sticker
+relacion.inicial.ica.sticker= No. formulario
 relacion.inicial.ica.fecprese=Fecha de presentación
 relacion.inicial.ica.totpag=Total pagado
 relacion.inicial.ica.totapovol=Total con aporte voluntario
+
+relacion.inicial.reteica.titulo=RETEICA
+relacion.inicial.reteica.aniograv=Año gravable
+relacion.inicial.reteica.periodo=Periodo
+relacion.inicial.reteica.tipdocu= Tipo de Documento
+relacion.inicial.reteica.numrefrec= No. referencia recaudo
+relacion.inicial.reteica.numform= No. formulario
+relacion.inicial.reteica.fecprese=Fecha de presentación
+relacion.inicial.reteica.totpag=Total pagado
+
 
 relacion.inicial.delineacion.titulo=Impuestos de Delineación Urbana
 relacion.inicial.delineacion.cdu=CDU
 relacion.inicial.delineacion.tipo=Tipo
 relacion.inicial.delineacion.modalidad=Modalidad
+relacion.inicial.delineacion.radi= Radicados
 relacion.inicial.delineacion.nurefrec=No. referencia recaudo
-relacion.inicial.delineacion.sticker=Sticker
+relacion.inicial.delineacion.numform=No. formulario
 relacion.inicial.delineacion.tipdocu=Tipo de documento
 relacion.inicial.delineacion.fecprese=Fecha de presentación
 relacion.inicial.delineacion.totrete=Total retención
@@ -3781,7 +3792,7 @@ relacion.inicial.delineacion.retencion.radicados=Radicados
 relacion.inicial.delineacion.retencion.tipo=Tipo
 relacion.inicial.delineacion.retencion.modalidad=Modalidad
 relacion.inicial.delineacion.retencion.nurefrec=No. referencia recaudo
-relacion.inicial.delineacion.retencion.sticker=Sticker
+relacion.inicial.delineacion.retencion.numform=No. formulario
 relacion.inicial.delineacion.retencion.tipdocu=Tipo de documento
 relacion.inicial.delineacion.retencion.fecprese=Fecha de presentación
 relacion.inicial.delineacion.retencion.totpag=Total pagado
@@ -3798,23 +3809,23 @@ relacion.inicial.gasolina.visualizar=Visualizar
 relacion.inicial.gasolina.aniograv=Año gravable
 relacion.inicial.gasolina.periodo=Periodo
 relacion.inicial.gasolina.nurefrec=No. referencia recaudo
-relacion.inicial.gasolina.sticker=Sticker
+relacion.inicial.gasolina.sticker=No. formulario
 relacion.inicial.gasolina.tipdoc=Tipo de documento
 relacion.inicial.gasolina.fecprese=Fecha de presentación
 relacion.inicial.gasolina.totpag=Total pagado
 
 relacion.inicial.publicidad.titulo=Impuestos de Publicidad Exterior
-relacion.inicial.publicidad.numresol= No. Resolución
+relacion.inicial.publicidad.numresol= No. resolución
 relacion.inicial.publicidad.tipvalla=Tipo de valla
 relacion.inicial.publicidad.visualizar=Visualizar
 relacion.inicial.publicidad.dirins=Dirección de instalación
 relacion.inicial.publicidad.orientacion=Orientación
 relacion.inicial.publicidad.regrisol=Registro No/ No Solicitud
 relacion.inicial.publicidad.numrefrec=No. referencia recaudo
-relacion.inicial.publicidad.sticker=Sticker
+relacion.inicial.publicidad.numForm=No. formulario
 relacion.inicial.publicidad.tipdoc=Tipo de documento
 relacion.inicial.publicidad.fecprese=Fecha de presentación
-relacion.inicial.publicidad.totpag=Total Pagado
+relacion.inicial.publicidad.totpag=Total pagado
 
 edocuenta.inicial.titulo= Estado de Cuenta
 edocuenta.inicial.descripcion=El Estado de cuenta es la vista...
