Ajustes para agregar la lista de delineacion urbana

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -105,6 +105,7 @@ type.Customer.exteriorPublicityTaxList.name=Impuestos de Publicidad Exterior
 type.Customer.gasTaxList.name=Impuestos de Gasolina
 type.Customer.reteIcaTax.name=ReteICA 
 type.Customer.vehiculosTaxList.name=Vehiculos
+type.Customer.urbanDelineationsTaxList.name=Delineación Urbana
 
 type.SDHAddress.name=Dirección
 type.SDHAddress.addKind.name=Tipo
