--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2121,7 +2121,7 @@ delineacion.urbana.radicados.codigoEstrato= Código de estrato
 delineacion.urbana.radicados.seleccionar= Seleccionar
 delineacion.urbana.radicados.regresar= Regresar
 delineacion.urbana.radicados.retencion= Presentar retención
-delineacion.urbana.radicados.declaracion= Generar Declaración vigencia actual
+delineacion.urbana.radicados.declaracion= Generar declaración/Corrección Vigencia actual
 delineacion.urbana.radicados.declaracion= Presentar declaración
 delineacion.urbana.radicados.generarPDF= Generar PDF
 
@@ -2515,7 +2515,7 @@ publicidad.exterior.search=Buscar
 publicidad.exterior.resolutionnumber=Número de Resolución
 publicidad.exterior.typefence=Tipo de Valla
 publicidad.exterior.select=Seleccionar
-publicidad.exterior.declarationpresent=Generar Declaración
+publicidad.exterior.declarationpresent=Generar declaración/Corrección Vigencia actual
 publicidad.exterior.rop=ROP
 publicidad.exterior.payonline=Pago en línea
 publicidad.exterior.detail.outdooradvertising=Detalle impuesto de Publicidad Exterior
@@ -2727,7 +2727,7 @@ publicidad.exterior.resolutionnumber=Numero de Resolución
 publicidad.exterior.typefence=Tipo de Valla
 publicidad.exterior.detalle=Detalle
 publicidad.exterior.ver= Ver
-publicidad.exterior.declarationpresent=Generar Declaración
+publicidad.exterior.declarationpresent=Generar declaración/Corrección Vigencia actual
 publicidad.exterior.regresar=Regresar
 publicidad.exterior.rop=ROP
 publicidad.exterior.payonline=Pago en línea
@@ -2962,7 +2962,7 @@ impuestos.sobreTasaGasolina.menu.buscar = Buscar
 impuestos.sobreTasaGasolina.menu.tipoDocumento = Tipo de Documento
 impuestos.sobreTasaGasolina.menu.numeroDocumento = Número de Documento
 impuestos.sobreTasaGasolina.menu.seleccionar = Seleccionar
-impuestos.sobreTasaGasolina.menu.presentarDeclaracion = Generar Declaración vigencia actual
+impuestos.sobreTasaGasolina.menu.presentarDeclaracion = Generar declaración/Corrección Vigencia actual
 impuestos.sobreTasaGasolina.menu.rop = ROP
 impuestos.sobreTasaGasolina.menu.pagoEnLinea = Pago en Línea
 impuestos.sobreTasaGasolina.menu.nombre= Nombre
@@ -3182,7 +3182,7 @@ delineacion.urbana.dec.firm.regresar=Regresar
 delineacion.urbana.dec.firm.cancelar=Cancelar
 delineacion.urbana.dec.firm.prerete= Presentar retención
 delineacion.urbana.dec.firm.predec= Presentar declaración
-delineacion.urbana.radicados.generar.declaracion= Generar declaración
+delineacion.urbana.radicados.generar.declaracion=Generar declaración/Corrección Vigencia actual
 delineacion.urbana.radicados.generar.retencion=Generar retención
 
 delineacion.urbana.radicados.nota.importante= Importante
@@ -3244,7 +3244,7 @@ sobre.vehiculo.liqui.tarfiactual= Tarifa
 sobre.vehiculo.liqui.anio= Año
 sobre.vehiculo.liqui.regresar= Regresar
 sobre.vehiculo.liqui.descfactura= Descargar factura vigencia actual
-sobre.vehiculo.liqui.presdecla= Generar declaración vigencia actual
+sobre.vehiculo.liqui.presdecla= Generar declaración/Corrección Vigencia actual
 
 
 psePaymentForm.tipoDeImpuesto=Tipo de impuesto
@@ -4162,7 +4162,7 @@ ica.inicial.representantes.tiprela=Tipo de relación
 ica.inicial.representantes.fecdesde=Fecha desde
 ica.inicial.representantes.fechasta=Fecha hasta
 ica.inicial.representantes.regresar=Regresar
-ica.inicial.representantes.presendecla=Generar Declaración Vigencia Actual
+ica.inicial.representantes.presendecla=Generar declaración/Corrección Vigencia actual
 ica.inicial.representantes.rop=ROP
 ica.inicial.representantes.paglinea=Pago en línea
 
@@ -31174,7 +31174,7 @@ predial.inicial.marcas.valex=Valor exención
 predial.inicial.marcas.conservacion=Conservación historica
 predial.inicial.marcas.btnregresar=Regresar
 predial.inicial.marcas.btndescar=Descarga de factura vigencia actual
-predial.inicial.marcas.generar=Generar declaración vigencia actual
+predial.inicial.marcas.generar=Generar declaración/Corrección Vigencia actual
 
 impuestos.presentarDeclaracion.notaPredial=Ya se ha generado una factura por ese año gravable, ingresa al menú “facturación” para descargar la factura”.
 impuestos.presentarDeclaracion.notaOtros= Si va a generar una declaración de corrección ingrese el impuesto, año gravable y periodo de la declaración inicial presentada.
