Faqs adding search counter

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -167,3 +167,4 @@ type.SdhFAQs.code.name=Código
 type.SdhFAQs.category.name=Categoría
 type.SdhFAQs.question.name=Pregunta
 type.SdhFAQs.answer.name=Respuesta
+type.SdhFAQs.searchCounter.name=Contador De Busquedas
