Se agregan cambios para consumo de servicio de RETEICA  y ajustes en la vista de agente Autorizado

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4890,7 +4890,7 @@ autorizado.crear.impuesto.peruni=Impuestos de Predial
 autorizado.crear.impuesto.pubeste=Impuestos de Publicidad Exterior
 autorizado.crear.impuesto.reteicomercio=Retenciones Industrial y Comercio
 autorizado.crear.impuesto.soblot=Sobre premios de lotería
-autorizado.crear.impuestovehiculos=Sobre Vehpiculos Automotores
+autorizado.crear.impuestovehiculos=Sobre Vehículos Automotores
 autorizado.crear.impuesto.gasolina=Impuestos de Motores a Gasolina
 autorizado.crear.impuesto.unazar=Unificado de azar
 autorizado.crear.impuesto.undist=Universidad Distrital
@@ -4976,6 +4976,9 @@ autorizado.crear.tramgen.proce.tramites=Trámites
 autorizado.crear.tramgen.proce.facturacion=Facuración
 autorizado.crear.tramgen.proce.declaraciones=Declaraciones
 autorizado.crear.tramgen.proce.consultas=Consultas
+autorizado.crear.tramgen.proce.actosOficiales=Actos oficiales
+
+autorizado.crear.tramgen.proce.idacto=Id acto
 
 autorizado.crear.documentos.titulo=5.- Anexar documentación
 autorizado.crear.documentos.nota1=Para continuar con tu proceso es necesario anexar los documentos
