--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2902,7 +2902,7 @@ impuestos.decGasolina.DatosGenerales.OpcionesUso = Opciones de uso
 impuestos.decGasolina.InformacionDec.titulo = Información de la declaración
 impuestos.decGasolina.InformacionDec.claseProducto = Clase de producto*
 impuestos.decGasolina.InformacionDec.galones = Galones gravados*
-impuestos.decGasolina.InformacionDec.preciosReferencia = Precios de referencia
+impuestos.decGasolina.InformacionDec.preciosReferencia = Tarifa/precio de referencia
 impuestos.decGasolina.InformacionDec.porcentajeAlcohol = Alcohol carburante%*
 impuestos.decGasolina.InformacionDec.baseGravable = Base gravable*
 impuestos.decGasolina.InformacionDec.valorSobretasa = Valor de sobretasa*
