Ajuste etiqueta de tràmites

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4707,7 +4707,7 @@ tramites.crear.categorizacion.notas.01=En el texto del mensaje no olvide incluir
 tramites.seguimiento.inicial.titulo=Trámites
 tramites.seguimiento.inicial.descrip=En la Oficina Virtual podrás crear y dar seguimiento a tus trámites de una forma muy sencilla
 tramites.seguimiento.inicial.title=Seguimiento de trámite
-tramites.seguimiento.inicial.desc=¿Quires conocer el seguimiento de tu trámite?
+tramites.seguimiento.inicial.desc=¿Quieres conocer el seguimiento de tu trámite?
 tramites.seguimiento.inicial.des=Selecciona cómo deseas buscar tu solicitud
 tramites.seguimiento.inicial.numcaso=Número de caso
 tramites.seguimiento.inicial.numrad=Número de radicado
