--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_en.properties
@@ -1790,7 +1790,7 @@ taxpayers.description=Bienvenido a la Oficina Virtual de la Secretaria Distrital
 authorizedAgents.title=Agentes Autorizados
 authorizedAgents.description=Ingresa aquí si ha sido autorizado un contribuyente de impuestos distritales para realizar trámites
 thirdAutorized.title=Tercero Autorizado
-thirdAutorized.description=Ingresa aquí si ha sido autorizado un contribuyente de impuestos distritales para realizar trámites
+thirdAutorized.description=Ingresa aquí si has sido autorizado por Dirección de Impuestos de Bogotá para la consulta de obligaciones pendientes.
 retainingAgent.title=Agente Retenedor
 retainingAgent.description=Ingresa aquí si eres Retenedor del Impuesto de Industria y Comercio ICA
 informationReporters.title=Reportantes de información
