Modificacion a etiquetas "Sobretasa a la gasolina motor"

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3550,7 +3550,7 @@ obligacion.sujeto.vehiculos.paglinea=Pago en Línea
 obligacion.sujeto.vehiculos.genrop=Generar ROP
 obligacion.sujeto.vehiculos.presendecla=Generar declaración
 
-obligacion.sujeto.gasolina.titulo=Impuesto Sobretasa a la Gasolina
+obligacion.sujeto.gasolina.titulo=Impuesto Sobretasa a la gasolina motor
 obligacion.sujeto.gasolina.aniograv=Año Gravable
 obligacion.sujeto.gasolina.periodo=Periodo
 obligacion.sujeto.gasolina.edoobliga=Estado de Obligación
@@ -3841,6 +3841,8 @@ edocuenta.inicial.tasint=Tasa de interés
 edocuenta.inicial.cancelar= Cancelar
 edocuenta.inicial.generar= Generar
 
+edocuenta.inicial.impuestos.0005=Sobretasa a la gasolina motor
+
 edocuenta.inicial.predio.titulo= Predial Unificado
 edocuenta.inicial.predio.chip = CHIP
 edocuenta.inicial.predio.matricula = Matrícula Inmobiliaría
@@ -3904,7 +3906,7 @@ edocuenta.inicial.deliurbana.orientacion=Orientación
 edocuenta.inicial.deliurbana.vigencia=Vigencia
 
 
-edocuenta.inicial.gasolina.titulo=Impuesto Sobretasa a la Gasolina
+edocuenta.inicial.gasolina.titulo=Impuesto Sobretasa a la gasolina motor
 edocuenta.inicial.gasolina.anigrav=Año gravable
 edocuenta.inicial.gasolina.periodo=Periodo
 edocuenta.inicial.gasolina.estado=Concepto
