--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31264,7 +31264,7 @@ spac.table.descargar=Imprimir Cupón
 
 #Mensejes para buzón
 
-buzon.mirit.mensaje=Señor contribuyente para activar la Notificación electrónica de Actos oficiales en el buzón electrónico ingresa a este enlace para leer los
+buzon.mirit.mensaje=Señor contribuyente para activar o desactivar la Notificación electrónica de Actos oficiales en el buzón electrónico ingresa a
 
 #Estado de cuenta para RETEICA
 edocuenta.inicial.reteica.titulo= RETEICA
