Ajaute a palabra Intentelo

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2397,7 +2397,7 @@ login.not.a.validEmail.exception=Escribe una dirección de correo electrónico v
 login.user.disabled.exception= Cuenta no activa revisa tu correo y actívala
 login.user.not.exists=Correo no registrado, obtén tu contraseña
 
-activate.account.error=Hubo un error al intentar activar su cuenta, por favor intentlo nuevamente más tarde.
+activate.account.error=Hubo un error al intentar activar la cuenta, por favor inténtalo nuevamente más tarde.
 activate.account.title=Activar Cuenta
 activate.account.success=Tu cuenta ha sido activada satisfactoriamente.
 
