Preparacion de pago - ajuste para mostrar mensaje en obligaciones pendientes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31354,3 +31354,5 @@ acto.detalle.inicial.idacto=Id Acto
 acto.detalle.inicial.detalle= Descripción del acto
 acto.detalle.inicial.fechaini= Fecha notificación
 acto.detalle.inicial.numexpe=Número de expediente
+
+prepararPago.error.0=La deuda por pagar es 0
