Tramites y registro (creacion) - ajustes para mostrar mensajes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1849,7 +1849,8 @@ register.passwordRequirements=La contraseña debe tener una letra mayúscula, un
 register.activateInbox=¿Deseas activar tu Buzón Tributario?
 register.personalDataAuthorization=Autorizo uso de la anterior información para fines institucionales
 register.confirmation=Bienvenido (a).<br />Tu usuario se creó correctamente. Para activarlo, ingresa al mensaje que te enviamos al correo electrónico registrado.
-register.userNotFound=Usuario no encontrado
+register.userNotFound=<b>Usuario no encontrado. </b>
+register.userNotFound.proceso=Por favor radica la solicitud en el correo: <a href="mailto:radicacion_virtual@shd.gov.co?subject=Creación de trámite SDH&body=Para creación de usuario adjunto documento de identificación y el formato RIT">radicacion_virtual@shd.gov.co</a>  adjuntando documento de identificación y el formato RIT que se encuentra en este enlace <a href="https://www.shd.gov.co/shd/sites/default/files/files/impuestos/2021/formato-86-F-02-rit-contribuyente-version-08-2021.xls">https://www.shd.gov.co/shd/sites/default/files/files/impuestos/2021/formato-86-F-02-rit-contribuyente-version-08-2021.xls</a>. O agenda cita para ser atendido en un punto presencial.
 register.userAlreadyRegistered=Usuario ya existente, favor de recuperar contraseña
 
 taxpayers.title=Contribuyente
@@ -4705,7 +4706,7 @@ tramites.crear.inicial.adj=Adjuntar
 tramites.crear.inicial.correo=Correo electrónico
 tramites.crear.inicial.rol=Rol
 tramites.crear.categorizacion.notas.06=En el texto del mensaje no olvide incluir la siguiente información:<br>*Número de Referencia de Recaudo del formulario tributario pagado. <br>* Banco en el que realizó el pago. <br>* Medio de pago (Ventanilla, Botón de pago, Corresponsal bancarios, Sucursal Virtual Bancaria...) <br>* Impuesto pagado <br>* Fecha en que realizó el pago <br>* Objeto de pago (predial CHIP, Vehículos Placa y los demás impuestos, tipo y número de identificación. <br>* Valor pagado.
-tramites.crear.categorizacion.notas.0101010101=En el texto del mensaje no olvide incluir la siguiente información:<br>* Número de teléfono fijo. <br>* Número de celular. <br>* Correo electrónico. <br>* Red social. <br>* Dirección de Notificación. <br>*<b> Nota:</b> Si requiere el certificado RIT para registrar actividades económicas por adjunte el RUT, junto con la copia de la cédula. <br>
+tramites.crear.categorizacion.notas.0101010101=En el texto del mensaje no olvide incluir la siguiente información:<br>* Número de teléfono fijo. <br>* Número de celular. <br>* Correo electrónico. <br>* Red social. <br>* Dirección de Notificación. <br>*<b> Nota:</b> Si requieres el certificado RIT para registrar actividades económicas adjunta el RUT y copia del documento de identificación. <br>
 
 tramites.seguimiento.inicial.titulo=Trámites
 tramites.seguimiento.inicial.descrip=En la Oficina Virtual podrás crear y dar seguimiento a tus trámites de una forma muy sencilla
