Ajuste etiquetas en Mi Rit para gasolina y publicidad

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2881,8 +2881,8 @@ mirit.certificacion.tituloImpuesto=Selecciona las opciones de Impuesto
 mirit.certificacion.opPredial=Impuestos de Predial
 mirit.certificacion.opVehicular=Impuestos de Vehículos
 mirit.certificacion.opICA=Impuestos de ICA
-mirit.certificacion.opPublicidadExterior=Impuestos de Publicidad Exterior
-mirit.certificacion.opSobretasaGasolina=Impuestos de Motores a Gasolina
+mirit.certificacion.opPublicidadExterior=Impuesto a la Publicidad Exterior Visual
+mirit.certificacion.opSobretasaGasolina=Impuesto Sobretasa a la Gasolina Motor 
 mirit.certificacion.opDelineaciónUrbana=Impuestos de Delineación Urbana 
 mirit.certificacion..error.pdfVacio=No se encontró el archivo de certificado seleccionado.
 
