Ajuste texto obligaciones pendientes gasolina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31311,7 +31311,7 @@ obligaciones.todos.noCuentaPendientes=No cuenta con obligaciones pendientes de e
 obligaciones.predial.noCuentaPendientes=No cuenta con obligaciones pendientes de Predial
 obligaciones.vehiculos.noCuentaPendientes=No cuenta con obligaciones pendientes de Impuestos de Vehículos
 obligaciones.ica.noCuentaPendientes=No cuenta con obligaciones pendientes de ICA
-obligaciones.gasolina.noCuentaPendientes=No cuenta con obligaciones pendientes de Sobretasa Gasolina
+obligaciones.gasolina.noCuentaPendientes=No cuenta con obligaciones pendientes de Sobretasa a la gasolina motor
 obligaciones.delineacion.noCuentaPendientes=No cuenta con obligaciones pendientes de Delineación Urbana
 obligaciones.publicidadExt.noCuentaPendientes=No cuenta con obligaciones pendientes de Publicidad Exterior
 
