Mi rit - ajuste para actualizar telefonos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1918,6 +1918,9 @@ mirit.contactData.anotherContactAddress=Otra dirección de contacto
 mirit.contactData.landPhone=Teléfono principal
 mirit.contactData.cellPhone=Teléfono Celular
 mirit.contactData.socialNetwork=Red Social
+mirit.contactData.telefono.movil=Teléfono Movil
+mirit.contactData.telefono.oficina=Teléfono Oficina
+mirit.contactData.telefono.fijo=Teléfono Fijo
 mirit.contactData.extension=Extensión
 mirit.contactData.socialNetworkUser=Usuario Red Social
 mirit.contactData.note=Diligencia únicamente los campos requeridos con la dirección actual y verifica en el recuadro superior que la dirección esté completa.
@@ -1936,6 +1939,7 @@ mirit.contactData.updateContactAddress=Actualizar dirección de contacto
 mirit.contactData.addSocialNetwork= Agregar red social
 mirit.contactData.updateRedesSociales= Actualizar redes sociales
 mirit.contactData.updateTelefono= Actualizar teléfono
+mirit.contactData.updateTelefonos= Actualizar teléfonos
 mirit.contactData.updateEmail= Actualizar Email
 mirit.contactData.updatePassword= Actualizar Contraseña
 mirit.contactData.updateAutorizaciones= Actualizar Autorizaciones
