Mi rit - ajuste para actualizar telefonos - complemento para solo mostrar 2 telefonos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1920,6 +1920,7 @@ mirit.contactData.cellPhone=Teléfono Celular
 mirit.contactData.socialNetwork=Red Social
 mirit.contactData.telefono.movil=Teléfono Movil
 mirit.contactData.telefono.oficina=Teléfono Oficina
+mirit.contactData.telefono.fijooficina=Teléfono Fijo / Oficina
 mirit.contactData.telefono.fijo=Teléfono Fijo
 mirit.contactData.extension=Extensión
 mirit.contactData.socialNetworkUser=Usuario Red Social
