Ajuste para quitar Valida cont de infoobjeto de publicidad y etiquetas de de estado de cuenta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3871,7 +3871,7 @@ edocuenta.inicial.predio.aniograv=Año gravable
 edocuenta.inicial.predio.desthacen=Destino hacendario
 edocuenta.inicial.predio.estado=Concepto
 edocuenta.inicial.predio.participa= % Participación
-edocuenta.inicial.predio.saldocargo= Saldo a cargo
+edocuenta.inicial.predio.saldocargo= Deuda
 edocuenta.inicial.predio.saldofavor=Saldo a favor
 edocuenta.inicial.predio.total=Total
 
@@ -3883,7 +3883,7 @@ edocuenta.inicial.vehiculo.linea=Línea
 edocuenta.inicial.vehiculo.visualizar= Visualizar
 edocuenta.inicial.vehiculo.aniograv=Año gravable
 edocuenta.inicial.vehiculo.estado=Concepto
-edocuenta.inicial.vehiculo.saldocargo=Saldo a cargo
+edocuenta.inicial.vehiculo.saldocargo=Deuda
 edocuenta.inicial.vehiculo.saldofavor=Saldo a favor
 edocuenta.inicial.vehiculo.total=Total
 edocuenta.inicial.vehiculo.impuesto=Impuesto
@@ -3899,7 +3899,7 @@ edocuenta.inicial.ica.tiporegimen=Régimen Tributario
 edocuenta.inicial.ica.aniograv=Año gravable
 edocuenta.inicial.ica.periodo=Periodo
 edocuenta.inicial.ica.estado=Concepto
-edocuenta.inicial.ica.saldocargo=Saldo a cargo
+edocuenta.inicial.ica.saldocargo=Deuda
 edocuenta.inicial.ica.saldofavor=Saldo a favor
 edocuenta.inicial.ica.total=Total
 
@@ -3911,7 +3911,7 @@ edocuenta.inicial.deliurbana.visualizar=Visualizar
 edocuenta.inicial.deliurbana.radicado=Radicado
 edocuenta.inicial.deliurbana.aniograv=Año gravable
 edocuenta.inicial.deliurbana.estado=Concepto
-edocuenta.inicial.deliurbana.saldocargo=Saldo a cargo
+edocuenta.inicial.deliurbana.saldocargo=Deuda
 edocuenta.inicial.deliurbana.saldofavor=Saldo a favor
 edocuenta.inicial.deliurbana.total=Total
 edocuenta.inicial.deliurbana.impuesto=Impuesto
@@ -3926,7 +3926,7 @@ edocuenta.inicial.gasolina.titulo=Impuesto Sobretasa a la gasolina motor
 edocuenta.inicial.gasolina.anigrav=Año gravable
 edocuenta.inicial.gasolina.periodo=Periodo
 edocuenta.inicial.gasolina.estado=Concepto
-edocuenta.inicial.gasolina.saldocargo=Saldo a cargo
+edocuenta.inicial.gasolina.saldocargo=Deuda
 edocuenta.inicial.gasolina.saldofavor=Saldo a favor
 edocuenta.inicial.gasolina.total=Total
 edocuenta.inicial.gasolina.tipdoc=Tipo de documento
@@ -3947,7 +3947,7 @@ edocuenta.inicial.publicidad.numresol=No. Resolución
 edocuenta.inicial.publicidad.anigrav=Año gravable
 edocuenta.inicial.publicidad.desthacen=Destino hacendario
 edocuenta.inicial.publicidad.estado=Concepto
-edocuenta.inicial.publicidad.saldocargo=Saldo a cargo
+edocuenta.inicial.publicidad.saldocargo=Deuda
 edocuenta.inicial.publicidad.saldofavor=Saldo a favor
 edocuenta.inicial.publicidad.total=Total
 
@@ -3955,7 +3955,7 @@ edocuenta.inicial.obligaciones.titulo=Obligaciones no tributarias
 edocuenta.inicial.obligaciones.concepto=Concepto
 edocuenta.inicial.obligaciones.anigrav=Año gravable
 edocuenta.inicial.obligaciones.estado=Concepto
-edocuenta.inicial.obligaciones.saldocargo=Saldo a cargo
+edocuenta.inicial.obligaciones.saldocargo=Deuda
 edocuenta.inicial.obligaciones.saldofavor=Saldo a favor
 edocuenta.inicial.obligaciones.total=Total
 edocuenta.inicial.obligaciones.destino=Destino hacendario
